--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   margin: 0;
-  background-color: #f8f9fa;
   color: #333;
 }
 
@@ -44,4 +45,98 @@ header nav a {
   font-weight: 500;
   font-size: 1rem;
   transition: color 0.2s;
+}
+
+.search-section {
+  margin-bottom: 40px;
+}
+
+.search-header {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.search-header h1 {
+  font-size: 2.5rem;
+  color: #2c3e50;
+  margin-bottom: 5px;
+}
+
+.search-header h2 {
+  font-size: 1.2rem;
+  color: #7f8c8d;
+  font-weight: 400;
+}
+
+.search-box {
+  background-color: white;
+  padding: 25px;
+  border-radius: 12px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+  border: 1px solid #eee;
+}
+
+.search-box h3 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 1.1rem;
+  color: #34495e;
+  border-bottom: 2px solid #f0f0f0;
+  padding-bottom: 10px;
+  display: inline-block;
+}
+
+.filters-layout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: flex-end;
+}
+
+.filter-group label {
+  font-size: 0.85rem;
+  font-weight: 600;
+  color: #666;
+}
+
+.filter-group .row {
+  display: flex;
+  gap: 10px;
+}
+
+.button-group {
+  display: flex;
+  gap: 10px;
+  flex-grow: 1;
+}
+
+.search-btn {
+  background-color: rgb(0, 100, 245);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  max-width: 300px;
+  flex-grow: 2;
+}
+
+.clear-btn {
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  flex-grow: 1;
+  max-width: 300px;
+}
+
+.search-btn:hover {
+  background-color: rgb(0, 80, 199);
+}
+.clear-btn:hover {
+  background-color: #c0392b;
 }
