--- a/src/App.css
+++ b/src/App.css
@@ -540,3 +540,13 @@ header nav a {
     border-style: solid;
   }
 }
+
+.map-frame {
+  width: 100%;
+  height: 400px;
+  border: 0;
+}
+
+.floor-plan-img {
+  max-width: 100%;
+}
