--- a/src/App.css
+++ b/src/App.css
@@ -86,59 +86,10 @@ header nav a {
   display: inline-block;
 }
 
-.filters-layout {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px 30px;
-  align-items: flex-end;
-}
-
-.filter-group label {
+.search-box label {
   font-size: 0.85rem;
   font-weight: 600;
   color: #666;
-}
-
-.filter-group .row {
-  display: flex;
-  gap: 20px;
-}
-
-.button-group {
-  display: flex;
-  gap: 10px;
-  flex-grow: 1;
-}
-
-.search-btn {
-  background-color: rgb(0, 100, 245);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: 600;
-  max-width: 300px;
-  flex-grow: 2;
-}
-
-.clear-btn {
-  background-color: #e74c3c;
-  color: white;
-  border: none;
-  padding: 10px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: 600;
-  flex-grow: 1;
-  max-width: 300px;
-}
-
-.search-btn:hover {
-  background-color: rgb(0, 80, 199);
-}
-.clear-btn:hover {
-  background-color: #c0392b;
 }
 
 .results-container {
